accept or reject invite
